refactor: use native pipe, use lambda functions in purrr and formatting

--- a/README.Rmd
+++ b/README.Rmd
@@ -73,9 +73,9 @@ The result is a package that enables exploratory data analysis like the followin
 library("tidyfun")
 data(dti_df, package = "tidyfun")
 
-dti_df %>%
-  group_by(case, sex) %>%
-  summarize(mean_cca = mean(cca, na.rm = TRUE)) %>%
+dti_df |>
+  group_by(case, sex) |>
+  summarize(mean_cca = mean(cca, na.rm = TRUE)) |>
   ggplot(aes(y = mean_cca, color = case)) +
   geom_spaghetti(size = 2) +
   facet_grid(~sex)
