--- a/vignettes/x05_Advice.Rmd
+++ b/vignettes/x05_Advice.Rmd
@@ -15,7 +15,7 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "##",
-  fig.width = 8, 
+  fig.width = 8,
   fig.height = 5.5,
   out.width = "90%"
 )
@@ -29,14 +29,14 @@ options(
   ggplot2.continuous.colour = "viridis",
   ggplot2.continuous.fill = "viridis"
 )
-scale_colour_discrete = scale_colour_viridis_d
-scale_fill_discrete = scale_fill_viridis_d
+scale_colour_discrete <- scale_colour_viridis_d
+scale_fill_discrete <- scale_fill_viridis_d
 
 library("tidyfun")
 data(chf_df, package = "tidyfun")
 data(dti_df, package = "tidyfun")
 
-pal_5 = viridis(7)[-(1:2)]
+pal_5 <- viridis(7)[-(1:2)]
 set.seed(1221)
 ```
 
